--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ myst-parser = "^0.17.0"
 sphinx-rtd-theme = "^1.0.0"
 sphinx-autoapi = "^1.8.4"
 jedi = "^0.18.1"
+toml = "^0.10.2"
 
 [tool.poetry.extras]
 nautobot = ["nautobot"]
