--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,8 +74,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.7"]
-        nautobot-version: ["1.2.11"]
+        python-version: ["3.7", "3.8", "3.9"]
+        nautobot-version: ["1.3.3"]
     env:
       INVOKE_NAUTOBOT_SSOT_VSPHERE_PYTHON_VER: "${{ matrix.python-version }}"
       INVOKE_NAUTOBOT_SSOT_VSPHERE_NAUTOBOT_VER: "${{ matrix.nautobot-version }}"
@@ -112,7 +112,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.7", "3.8", "3.9"]
-        nautobot-version: ["1.2.11"]
+        nautobot-version: ["1.3.3"]
     runs-on: "ubuntu-20.04"
     env:
       INVOKE_NAUTOBOT_SSOT_VSPHERE_PYTHON_VER: "${{ matrix.python-version }}"
