--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ sphinx-rtd-theme = "*"
 sphinx-autoapi = "*"
 jedi = "*"
 toml = "*"
+responses = "^0.20.0"
 
 [tool.poetry.extras]
 nautobot = ["nautobot"]
