--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,7 +4,7 @@ name: "Documentation"
 on: # yamllint disable
   push:
     branches:
-      - "*" # TODO: Set to main, after first release
+      - "main"
 
 jobs:
   documentation:
