--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.7", "3.8", "3.9"]
-        nautobot-version: ["1.3.3", "1.4.1"]
+        nautobot-version: ["1.3.3"]
     env:
       INVOKE_NAUTOBOT_SSOT_VSPHERE_PYTHON_VER: "${{ matrix.python-version }}"
       INVOKE_NAUTOBOT_SSOT_VSPHERE_NAUTOBOT_VER: "${{ matrix.nautobot-version }}"
